fixed layout bug

--- a/blub/public/stylesheets/style.css
+++ b/blub/public/stylesheets/style.css
@@ -16,7 +16,7 @@ a.lined{
   text-decoration: underline;
 }
 
-a.unlined:hover{
+.unlined:hover{
   text-decoration: none;
 }
 
